--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.486.0",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.4.1",
