--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,35 +32,42 @@ jobs:
           name: dist-zip
           path: dist.zip
 
+      # ADICIONA A CHAVE CORRETA
       - name: Add SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/lottuschave.pem
           chmod 600 ~/.ssh/lottuschave.pem
 
+      # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+      # 1) ENVIA dist.zip PARA EC2 PUBLICA (CHAVE CERTA)
+      # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
       - name: Copy dist.zip to EC2 PUBLIC
         run: |
-          scp -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key dist.zip \
+          scp -o StrictHostKeyChecking=no -i ~/.ssh/lottuschave.pem dist.zip \
             ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_PUBLIC }}:/home/${{ secrets.EC2_USER }}/dist.zip
 
+      # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+      # 2) PUBLICA → envia para os FRONT-END PRIVADOS
+      # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
       - name: From PUBLIC → send dist.zip to FRONT 1 and FRONT 2
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_PUBLIC }} "
-          for host in ${{ secrets.FRONT_PRIV1 }} ${{ secrets.FRONT_PRIV2 }}; do
-          echo 'Enviando para' \$host '...'
-          scp -i /home/ubuntu/parChaves/lottuschave.pem -o StrictHostKeyChecking=no dist.zip ubuntu@\$host:/home/ubuntu/dist.zip
-          done
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/lottuschave.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_PUBLIC }} "
+            for host in ${{ secrets.FRONT_PRIV1 }} ${{ secrets.FRONT_PRIV2 }}; do
+              echo 'Enviando dist.zip para' \$host '...'
+              scp -i ~/.ssh/lottuschave.pem -o StrictHostKeyChecking=no dist.zip ubuntu@\$host:/home/ubuntu/dist.zip
+            done
           "
 
-
-
+      # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+      # 3) MOVE O ARQUIVO PARA /var/www/html em cada FRONT-END
+      # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
       - name: Mover dist.zip para /var/www/html em cada FRONT
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_PUBLIC }} "
-            set -e
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/lottuschave.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_PUBLIC }} "
             for host in ${{ secrets.FRONT_PRIV1 }} ${{ secrets.FRONT_PRIV2 }}; do
               echo 'Movendo dist.zip em:' \$host
-              ssh -i ~/.ssh/lottuschave.pem ubuntu@\$host '
+              ssh -o StrictHostKeyChecking=no -i ~/.ssh/lottuschave.pem ubuntu@\$host '
                 sudo mkdir -p /var/www/html
                 sudo mv ~/dist.zip /var/www/html/
               '
