--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Localhost
 VITE_API_URL=http://localhost:8080/api
 VITE_IA_URL=http://127.0.0.1:5000
-VITE_UPLOAD_URL=http://localhost:5000
+VITE_UPLOAD_URL=http://localhost:8080/api
 
 # Produção
 # VITE_API_URL=
